# aris

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  ethercat_start.sh  start_all.sh
common_headers/: Platform.h.in
config/: FindXenomai.cmake  aris-config.cmake.in  aris_version.h.in
demo/demo_3R/: main.cpp
demo/demo_Aris_Control/: #main.cpp#  .cproject  .project  main.cpp
demo/demo_Aris_Sensor/: conio.h
demo/demo_command_parser_cpp/: main.cpp
demo/demo_command_parser_xml/: main.cpp
demo/demo_control_wifi/: main.cpp
demo/demo_core_structure_cpp/: main.cpp
demo/demo_expression_calculator/: main.cpp
demo/demo_hulk/: main.cpp
demo/demo_model_delta/: main.cpp
demo/demo_model_multi/: main.cpp
demo/demo_model_scara/: main.cpp
demo/demo_model_seven_axis/: main.cpp
demo/demo_object/: main.cpp
demo/demo_reflection/: main.cpp
demo/demo_robot/: .gitignore  CMakeLists.txt
demo/demo_robot/Client/: client.cpp
demo/demo_robot/Server/: kinematic.cpp  kinematic.h  main.cpp  newslave.cpp  newslave.h  plan.cpp  plan.h
demo/demo_robot/Simulation/: main.cpp
demo/demo_robot/doc/: Doxyfile
demo/demo_robot/resource/: robot.xml  robot_motion.xml  robot_motor.xml
demo/demo_robot/resource/graphic_file/: p1a.x_t  p1b.x_t  p3a.x_t  p3b.x_t  up.x_t
demo/demo_rokae_server/: main.cpp
demo/demo_server/: main.cpp  plan.xml
demo/demo_server_puma/: main.cpp
demo/demo_server_rokae_xl4/: main.cpp
demo/demo_server_scara/: main.cpp
demo/demo_server_ur/: main.cpp
demo/demo_stewart/: main.cpp
demo/demo_ur/: main.cpp
demo/rbt/: client.cpp
doc/: Doxyfile  Doxyfile.in  Doxyfile_old_backup  Robot_III.xml  aris.chm
enc_temp_folder/6b4a3ed1d417e1b9fc2179e1c34cd338/: math_matrix.hpp
enc_temp_folder/9312cbd49d9a346e78ecfe0f066dff5/: path.cpp
include/: aris.hpp
sh/: create_project.bat  install_xsens_driver.sh  start_ethercat_master.sh
sh/demo/: CMakeLists.txt
sh/demo/src/: main.cpp
sh/xsens_driver/: Makefile  xsens_mt.c
src/: aris.h
src/Aris_Control/: AnalogIOData.h  AnalogInputs.cpp  AnalogInputs.h  AnalogOutputs.cpp  AnalogOutputs.h  Aris_Control.cpp  Aris_Control.h  Aris_ControlData.cpp  Aris_ControlData.h  Aris_Control_Sensor.cpp  Aris_Control_Sensor.h  Aris_Device.cpp  Aris_Device.h  Aris_EtherCat.cpp  Aris_EtherCat.h  Aris_Motion.cpp  Aris_Motion.h  Aris_Pipe.cpp  Aris_Pipe.h  Aris_Sensor.cpp  Aris_Sensor.h  Aris_SysBase.cpp  Aris_SysBase.h  DeviceMaster.cpp  DeviceMaster.h  ElmoMotorData.cpp  ElmoMotorData.h  ElmoMotorDriver.cpp  ElmoMotorDriver.h  ElmoMotorEnum.h  EthercatCoupler.cpp  EthercatCoupler.h  GlobalConfiguration.h  PrintInfo.xml  RealtimeCore.cpp  RealtimeCore.h  SysBase.cpp  SysBase.h  SysPID.cpp  SysPID.h  (+2 more)
src/Aris_Control2/: Aris_ControlData.cpp  Aris_Device.cpp  Aris_Device.h  Aris_EtherCat.cpp  Aris_EtherCat.h  Aris_Motion.cpp  Aris_Motion.h  Aris_Pipe.h
src/Aris_Core/: Aris_Core.cpp  Aris_Core.h  Aris_Message.cpp  Aris_Message.h  Aris_Socket.cpp  Aris_Socket.h  Aris_Thread.cpp  Aris_Thread.h  Aris_XML.cpp  Aris_XML.h
src/Aris_DynKer/: Aris_DynKer.cpp  Aris_DynKer.h  Aris_DynModel.cpp  Aris_DynModel.h  Aris_DynModelBase.cpp  Aris_DynModelBase.h
src/Aris_ExpCal/: Aris_ExpCal.cpp  Aris_ExpCal.h
src/Aris_Plan/: Aris_Plan.cpp  Aris_Plan.h
src/Aris_Sensor/: Aris_IMU.cpp  Aris_IMU.h  Aris_Sensor.cpp  Aris_Sensor.h  Aris_Vision.cpp  Aris_Vision.h
src/aris_control/: aris_control.h  aris_control_controller_motion.cpp  aris_control_controller_motion.h  aris_control_ethercat.cpp  aris_control_ethercat.h  aris_control_ethercat_kernel.cpp  aris_control_ethercat_kernel.h  aris_control_kernel.cpp  aris_control_kernel.h  aris_control_master_slave.cpp  aris_control_master_slave.h  aris_control_motion.cpp  aris_control_motion.h  aris_control_pipe.cpp  aris_control_pipe.h  aris_control_rt_timer.cpp  aris_control_rt_timer.h  aris_ethercat.cpp  aris_ethercat.h  aris_motion.cpp  aris_motion.h  aris_pipe.h  ecrt_windows_py.h
src/aris_control_server/: aris_control_server.cpp  aris_control_server.h
src/aris_core/: aris_core.h  aris_core_basic_type.cpp  aris_core_basic_type.h  aris_core_command.cpp  aris_core_command.h  aris_core_expression_calculator.cpp  aris_core_expression_calculator.h  aris_core_log.cpp  aris_core_log.h  aris_core_msg.cpp  aris_core_msg.h  aris_core_msg_loop.cpp  aris_core_msg_loop.h  aris_core_object.cpp  aris_core_object.h  aris_core_pipe.cpp  aris_core_pipe.h  aris_core_socket.cpp  aris_core_socket.h  aris_core_websocket.cpp  aris_core_websocket.h  aris_core_xml.cpp  aris_core_xml.h  sha1.cpp  sha1.h  tinyxml2.cpp  tinyxml2.h
src/aris_dyn/: aris_dyn_kernel.cpp  aris_dyn_kernel.h  aris_dyn_model.cpp  aris_dyn_model.h  aris_dyn_model_base.cpp  aris_dyn_model_base.h
src/aris_dynamic/: aris_dynamic.h  aris_dynamic_block_matrix.cpp  aris_dynamic_block_matrix.h  aris_dynamic_cell.cpp  aris_dynamic_cell.h  aris_dynamic_kernel.cpp  aris_dynamic_kernel.h  aris_dynamic_matrix.cpp  aris_dynamic_matrix.h  aris_dynamic_model.cpp  aris_dynamic_model.h  aris_dynamic_model_base.cpp  aris_dynamic_model_base.h  aris_dynamic_model_basic.cpp  aris_dynamic_model_basic.h  aris_dynamic_model_compute.cpp  aris_dynamic_model_compute.h  aris_dynamic_model_coordinate.cpp  aris_dynamic_model_coordinate.h  aris_dynamic_model_instance.cpp  aris_dynamic_model_instance.h  aris_dynamic_model_interaction.cpp  aris_dynamic_model_interaction.h  aris_dynamic_model_joint.cpp  aris_dynamic_model_joint.h  aris_dynamic_model_simulation.cpp  aris_dynamic_model_simulation.h  aris_dynamic_model_solver.cpp  aris_dynamic_model_solver.h  aris_dynamic_plan.cpp  aris_dynamic_plan.h  aris_dynamic_screw.cpp  aris_dynamic_screw.h  aris_dynamic_simple_model.cpp  aris_dynamic_simple_model.h  aris_dynamic_spline.cpp  aris_dynamic_spline.h
src/aris_exp_cal/: aris_exp_cal.cpp  aris_exp_cal.h
src/aris_plan/: aris_plan.cpp  aris_plan.h  aris_plan_algorithm.cpp  aris_plan_algorithm.h  aris_plan_command.cpp  aris_plan_command.h  aris_plan_function.cpp  aris_plan_function.h  aris_plan_root.cpp  aris_plan_root.h
test/: test_DynKer.cpp  test_dynamic.cpp
(+371 files in other folders)
